; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-proc-ext/src/extr_proc.c_mrb_proc_source_location.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/mrbgems/mruby-proc-ext/src/extr_proc.c_mrb_proc_source_location.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RProc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_proc_source_location to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_proc_source_location(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.RProc*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.RProc* @mrb_proc_ptr(i32 %10)
  store %struct.RProc* %11, %struct.RProc** %6, align 8
  %12 = load %struct.RProc*, %struct.RProc** %6, align 8
  %13 = call i64 @MRB_PROC_CFUNC_P(%struct.RProc* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 (...) @mrb_nil_value()
  store i32 %16, i32* %3, align 4
  br label %43

17:                                               ; preds = %2
  %18 = load %struct.RProc*, %struct.RProc** %6, align 8
  %19 = getelementptr inbounds %struct.RProc, %struct.RProc* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %7, align 8
  %23 = call i8* @mrb_debug_get_filename(i32* %22, i32 0)
  store i8* %23, i8** %9, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @mrb_debug_get_line(i32* %24, i32 0)
  store i32 %25, i32* %8, align 4
  %26 = load i8*, i8** %9, align 8
  %27 = icmp ne i8* %26, null
  br i1 %27, label %33, label %28

28:                                               ; preds = %17
  %29 = load i32, i32* %8, align 4
  %30 = icmp eq i32 %29, -1
  br i1 %30, label %31, label %33

31:                                               ; preds = %28
  %32 = call i32 (...) @mrb_nil_value()
  br label %41

33:                                               ; preds = %28, %17
  %34 = load i32*, i32** %4, align 8
  %35 = load i32*, i32** %4, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = call i32 @mrb_str_new_cstr(i32* %35, i8* %36)
  %38 = load i32, i32* %8, align 4
  %39 = call i32 @mrb_fixnum_value(i32 %38)
  %40 = call i32 @mrb_assoc_new(i32* %34, i32 %37, i32 %39)
  br label %41

41:                                               ; preds = %33, %31
  %42 = phi i32 [ %32, %31 ], [ %40, %33 ]
  store i32 %42, i32* %3, align 4
  br label %43

43:                                               ; preds = %41, %15
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local %struct.RProc* @mrb_proc_ptr(i32) #1

declare dso_local i64 @MRB_PROC_CFUNC_P(%struct.RProc*) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i8* @mrb_debug_get_filename(i32*, i32) #1

declare dso_local i32 @mrb_debug_get_line(i32*, i32) #1

declare dso_local i32 @mrb_assoc_new(i32*, i32, i32) #1

declare dso_local i32 @mrb_str_new_cstr(i32*, i8*) #1

declare dso_local i32 @mrb_fixnum_value(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
